fix nav button align right

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -156,6 +156,8 @@ nav {
     background: none;
     font-weight: 900;
     font-size: 2rem;
+    position: relative;
+    right: -1%;
   }
 
   .temp {
